--- a/app/views/static_pages/kbus.html.erb
+++ b/app/views/static_pages/kbus.html.erb
@@ -2,14 +2,12 @@
 
 <div class = "container">
   <div class = "center jumbotron">
-    <h1>Coming Soon!</h1>
+    <h1>Full App Coming Soon!</h1>
     <p> This will soon direct you to my newest project, called Knowledgeabus (Like, knowledgable.. but with bus instead). </p>
 
-    <p>	Created as a final project for SEG2105, by Emilie and Zeyad (last names omitted for privacy reasons.)</p>
-
-    <div class="btn btn-success">
-      <%= link_to "I'll be back soon!", root_path, id: "logo" %>
-    </div>
+    <p>	Created as a final project for SEG2105, by Emilie and Zeyad</p>
+    <p> Sign up below!</p>
+    <%= link_to "New Users - sign up!", signup_path, class: "btn btn-lg btn-primary" %>
 
   </div>
 </div>
