--- a/app/views/users/account.html.erb
+++ b/app/views/users/account.html.erb
@@ -1,5 +1,7 @@
 <% provide(:title, "Account") %>
 <h1>Account information</h1>
 
-<%= link_to "Profile",    current_user %>
- <li><%= link_to "Update your profile", edit_user_path(current_user) %></li>
+<li><%= link_to "Profile",    current_user %></li>
+<li><%= link_to "Update your profile", edit_user_path(current_user) %></li>
+<li><%= link_to "Log out", logout_path, method: "delete" %></li>
+ 
